k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-inference
  labels:
    app: yolo-inference
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yolo-inference
  template:
    metadata:
      labels:
        app: yolo-inference
        tier: backend
    spec:
      containers:
      - name: yolo-inference
        image: sawandevrani/yolo_monitoring:v2
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "2000m"       
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 30  
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 20
